<resources>
    <string name="app_name">Users List</string>

    <string name="user_name_sample">Fulano Beltrano da Silva</string>
    <string name="sample_empty">-</string>
    <string name="error_sample">Erro: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>

    <!-- Listagem -->
    <string name="user_type">Tipo de usuário: %s</string>
    <string name="user_admin">Administrador: %s</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <string name="search_user_hint">Digite o nome de usuário para buscar.</string>
    <string name="user_list_loading_text">Carregando usuários.\nAguarde</string>
    <string name="user_profile_loading_text">Carregando informações do usuário %s.\n\nAguarde</string>

    <!-- perfil -->
    <string name="profile_header_title">Perfil de %s</string>
    <string name="profile_image">Imagem de perfil</string>
    <string name="profile_company_lb">Compania</string>
    <string name="profile_Location_lb">Localização</string>
    <string name="profile_blog_lb">Blog</string>
    <string name="profile_created_lb">Criado em</string>
    <string name="profile_update_lb">Ultima atualização</string>

    <string name="profile_repo_loading_info">Carregando repositorio do usuário %s.\n\nAguarde</string>
    <string name="profile_repo_loading_page">Carregando pagina %s.\n\nAguarde</string>

    <!-- listagem repo -->
    <string name="repo_list_header_title">Repositórios de %s</string>
    <string name="repo_list_name">Nome</string>
    <string name="repo_none">N/D</string>
    <string name="repo_list_description">Descrição</string>
    <string name="repo_list_license">Licença</string>
    <string name="repo_list_created">Criado em</string>
    <string name="repo_list_updated">Atualizado em</string>
    <string name="repo_message_loaded">Clique em um item da lista para selecionar um repositórios para mais detalhes.</string>
    <string name="repo_message_loading">Carregando página %s.</string>
    <string name="error_repo_empty">Não há repositorios listados para esse usuário.</string>

    <!-- Erros -->
    <string name="error_user_list_search">Não há usuarios com esses termos.\n\nVerifique os termos utilizados e tente novamente.</string>
    <string name="error_api">Houve um erro no carregamento.\n\nVerifique a conexão e tente novamente.</string>
    <string name="error_user_list_empty">Houve um problema no carregamento e lista está vazia.\n\nVerifique a conexão e tente novamente.</string>
    <string name="profile_repo_btn">LISTAR REPOSITÓRIOS</string>


</resources>