<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llRepoCell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/size_10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_04"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repo_list_name"
                android:textSize="@dimen/txt_list_secondary_b" />

            <TextView
                android:id="@+id/tvRepoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_08"
                android:text="@string/sample_empty"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/txt_list_secondary_b"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_04"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repo_list_description"
                android:textSize="@dimen/txt_list_secondary_b" />

            <TextView
                android:id="@+id/tvRepoDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_08"
                android:text="@string/sample_empty"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/txt_list_secondary_b"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_04"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repo_list_created"
                android:textSize="@dimen/txt_list_secondary_b" />

            <TextView
                android:id="@+id/tvRepoCreated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_08"
                android:text="@string/sample_empty"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/txt_list_secondary_b"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/size_04"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repo_list_updated"
                android:textSize="@dimen/txt_list_secondary_b" />

            <TextView
                android:id="@+id/tvRepoUpdated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_empty"
                android:layout_marginStart="@dimen/size_08"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/txt_list_secondary_b"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <include
        android:id="@+id/include"
        layout="@layout/ic_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>